objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>OdometerUnits_TXT__c</fullName>
        <label>Odometer Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kilometer</fullName>
                </value>
                <value>
                    <fullName>miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Odometer_TXT__c</fullName>
        <label>Odometer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHold_DT__c</fullName>
        <label>OnHold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpportunityStatus_TXT__c</fullName>
        <label>Opportunity Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned/Routed to Dealer</fullName>
                </value>
                <value>
                    <fullName>Auto-response sent</fullName>
                </value>
                <value>
                    <fullName>Lead Opened</fullName>
                </value>
                <value>
                    <fullName>Lead Received</fullName>
                </value>
                <value>
                    <fullName>Customer phoned (Inbound phone)</fullName>
                </value>
                <value>
                    <fullName>Customer emailed (Inbound email)</fullName>
                </value>
                <value>
                    <fullName>Salesperson responded by Email</fullName>
                </value>
                <value>
                    <fullName>Salesperson responded by Phone</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson responded by email</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson responded by Phone</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson request another appointment by email</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson request another appointment by phone</fullName>
                </value>
                <value>
                    <fullName>Credit Application</fullName>
                </value>
                <value>
                    <fullName>Credit Application (3rd party)</fullName>
                </value>
                <value>
                    <fullName>Trade-In Appraisal</fullName>
                </value>
                <value>
                    <fullName>Broadcast Email</fullName>
                </value>
                <value>
                    <fullName>Made Appointment</fullName>
                </value>
                <value>
                    <fullName>Demoed/Test Drove</fullName>
                </value>
                <value>
                    <fullName>Boat/Outboard Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Appointment Didn’t Show</fullName>
                </value>
                <value>
                    <fullName>Appointment Showed</fullName>
                </value>
                <value>
                    <fullName>Offer to Purchase</fullName>
                </value>
                <value>
                    <fullName>Model in Stock</fullName>
                </value>
                <value>
                    <fullName>Model not in Stock</fullName>
                </value>
                <value>
                    <fullName>Model on back order</fullName>
                </value>
                <value>
                    <fullName>Credit Denied</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson marked sold</fullName>
                </value>
                <value>
                    <fullName>Salesperson marked vehicle sold</fullName>
                </value>
                <value>
                    <fullName>Lost Sales</fullName>
                </value>
                <value>
                    <fullName>Any additional vehicle sold info (delivered, punched, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity_SF_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Score__c</fullName>
        <label>Opportunity Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Scoring4__c</fullName>
        <label>Opportunity_Scoring4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Options_TXT__c</fullName>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherContacts_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Other Contacts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherLeadProvider_TXT__c</fullName>
        <label>Other Lead Provider</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <description>Type of ownership</description>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Owner</fullName>
                </value>
                <value>
                    <fullName>Former Owner</fullName>
                </value>
                <value>
                    <fullName>No Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PECurrentProductsOwned_TXT__c</fullName>
        <label>PE Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatusHousehold_TXT__c</fullName>
        <label>PE Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatus_TXT__c</fullName>
        <label>PE Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned2_TXT__c</fullName>
        <label>PSP Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned_TXT__c</fullName>
        <label>PSP Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatusHousehold_TXT__c</fullName>
        <label>PSP Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatus_TXT__c</fullName>
        <label>PSP Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Loyal</fullName>
                </value>
                <value>
                    <fullName>Very Loyal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packages_TXT__c</fullName>
        <label>Packages</label>
        <length>31000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pager_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Pager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhoneType_NM__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>voice</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>cellphone</fullName>
                </value>
                <value>
                    <fullName>home</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
                <value>
                    <fullName>cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Possibletrade_TXT__c</fullName>
        <label>Possible Trade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_TXT__c</fullName>
        <label>Power</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredDealerAccount_TXT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Preferred Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDealerContact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDealerNumber_NUM__c</fullName>
        <label>Preferred Dealer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month__c</fullName>
        <description>Field to show if Opportunity is created in Previous Month - CAPS-5055</description>
        <formula>IF(
  AND(
    MONTH(DATEVALUE( CreatedDate)) = MONTH((TODAY()))-1,
    YEAR(DATEVALUE( CreatedDate)) = YEAR((TODAY()))
  ), 
  1, 
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Week__c</fullName>
        <description>CAPS-5055</description>
        <formula>IF(TODAY() - WEEKDAY(TODAY()) - 6 &lt;= DATEVALUE(CreatedDate)
&amp;&amp; TODAY() - WEEKDAY(TODAY()) &gt;= DATEVALUE(CreatedDate),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Week Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceSource_TXT__c</fullName>
        <label>Price Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceType_TXT__c</fullName>
        <label>Price Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_TXT__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInterest_TXT__c</fullName>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>ProductLine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Model_Group_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Model Group</label>
        <referenceTo>Product_Model_Group__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Model_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Model</label>
        <referenceTo>Product_Model__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_TXT__c</fullName>
        <formula>Year_YR__c + &quot; &quot; + Model_TXT__c + &quot; &quot; + Model_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Month__c</fullName>
        <label>Production Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Ids_ID__c</fullName>
        <label>Prospect IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderContactDetail_TXT__c</fullName>
        <label>Provider Contact Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderDetail_TXT__c</fullName>
        <inlineHelpText>Source Lead Provider Name</inlineHelpText>
        <label>Provider Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderService_TXT__c</fullName>
        <label>Provider Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderSourceType_TXT__c</fullName>
        <label>Provider Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Additional_Source_Information__c</fullName>
        <description>Additional information of the source. Formerly called &quot;Source Name&quot; in eShopping</description>
        <label>Additional Source Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Ids_ID__c</fullName>
        <label>Provider IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Tool_Name__c</fullName>
        <description>The tool via which a lead is generated at a dealer web site,  specific for dealers to see as concatenated with Provider Name.  For example, ePrice Tool.  External</description>
        <label>Provider Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_URL__c</fullName>
        <description>Actual web (URL)  that a provider used to collect this lead</description>
        <label>Provider URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PurchaseEarliestDate_DT__c</fullName>
        <label>Purchase Earliest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseHorizon_TXT__c</fullName>
        <label>Purchase Horizon</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseLatestDate_DT__c</fullName>
        <label>Purchase Latest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasedate_DT__c</fullName>
        <label>When was the last honda purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_AMT__c</fullName>
        <label>Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cloning__c</fullName>
        <label>Reason For Cloning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Buy-Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reglink_TXT__c</fullName>
        <label>Product Registration Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Case_Number__c</fullName>
        <description>Related Case Number will be added at the time Manually Routing the Opportunity.</description>
        <label>Related Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relative_TXT__c</fullName>
        <label>Relative to</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresManualValidation_FLG__c</fullName>
        <formula>( LeadProvider_ID__r.RecordType.DeveloperName &lt;&gt; &apos;Provider&apos; || ISBLANK( LeadProvider_ID__c ) ) || (ValidEmail_FLG__c = FALSE) || (ISBLANK(ContactKey_TXT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Manual Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reroute_ticket_number__c</fullName>
        <description>Ticket Number while Re-routing Opportunities</description>
        <inlineHelpText>Case number / JIRA ticket number / ITSM number if applicable</inlineHelpText>
        <label>Reroute ticket number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_DSP__c</fullName>
        <label>Response DSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Time_in_Minutes__c</fullName>
        <label>Response Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Urban_Science__c</fullName>
        <label>Response Urban Science</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Date_DT__c</fullName>
        <label>Retail Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Routable_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Routable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoutedDateTime__c</fullName>
        <description>Opportunity Routed Date TIme</description>
        <label>RoutedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Date__c</fullName>
        <description>Routing Date</description>
        <label>Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Error__c</fullName>
        <label>Routing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Error_for_Dashboard__c</fullName>
        <label>Routing Error for Dashboard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Failure_Date_Time__c</fullName>
        <label>Routing Failure Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Status_Message__c</fullName>
        <label>CRM Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Status_Success_Age_NUM__c</fullName>
        <formula>IF( NOT( ISBLANK(Routing_Success_Date_Time__c)) , (NOW()- Routing_Success_Date_Time__c )*24, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of hours passed since the opportunity was routed successfully to the Dealer</inlineHelpText>
        <label>Routing Status Success Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Status__c</fullName>
        <label>Routing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Sent to Dealer</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Submitted for Re-Routing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Success_Date_Time__c</fullName>
        <label>Routing Success Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_description__c</fullName>
        <label>SFMC Sales description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errorcode__c</fullName>
        <label>SFMC Sales errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errordescription__c</fullName>
        <label>SFMC Sales errordescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_status__c</fullName>
        <label>SFMC Sales status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_description__c</fullName>
        <label>SFMC Service description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errorcode__c</fullName>
        <label>SFMC Service errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errordescription__c</fullName>
        <label>SFMC Service errordescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_status__c</fullName>
        <label>SFMC Service status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_description_TXT__c</fullName>
        <label>SFMC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_errorcode_TXT__c</fullName>
        <label>SFMC Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_errordescription_TXT__c</fullName>
        <label>SFMC Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_status_TXT__c</fullName>
        <label>SFMC Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_4_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 4 Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sale has been registered with Honda.</inlineHelpText>
        <label>Registration Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Status__c</fullName>
        <label>Sale Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matched to Dealer</fullName>
                </value>
                <value>
                    <fullName>Matched to Other Dealer</fullName>
                </value>
                <value>
                    <fullName>Sale Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesDistrict_TXT__c</fullName>
        <label>Sales District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRelatedDealerNumber__c</fullName>
        <label>Sales Related Dealer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesZone_TXT__c</fullName>
        <label>Sales Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesregion_TXT__c</fullName>
        <label>Sales Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_TXT__c</fullName>
        <label>Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUVs and Crossovers</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Minivan and Truck</fullName>
                </value>
                <value>
                    <fullName>Electrified</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Offroad</fullName>
                </value>
                <value>
                    <fullName>ATV</fullName>
                </value>
                <value>
                    <fullName>SXS</fullName>
                </value>
                <value>
                    <fullName>Generators</fullName>
                </value>
                <value>
                    <fullName>Lawn Mowers</fullName>
                </value>
                <value>
                    <fullName>Snow Blowers</fullName>
                </value>
                <value>
                    <fullName>Pumps</fullName>
                </value>
                <value>
                    <fullName>Tillers</fullName>
                </value>
                <value>
                    <fullName>Trimmers</fullName>
                </value>
                <value>
                    <fullName>Robotic Mowers</fullName>
                </value>
                <value>
                    <fullName>Outboard Motors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendOnlyToUrbanScience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendOnlyToUrbanScience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_DSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to DSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Urban_Science_Status__c</fullName>
        <label>Sent to Urban Science Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRelatedDealerNumber__c</fullName>
        <label>Service Related Dealer Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement_TXT__c</fullName>
        <defaultValue>&quot;No Escalation&quot;</defaultValue>
        <inlineHelpText>This shows how high of an escalation was done for this opportunity. The highest level is Level 3 and that escalation goes to upper management.</inlineHelpText>
        <label>Service Level Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Escalation</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shopping_Tool_Name__c</fullName>
        <description>Internal tool Name. Calculator vs. Inventory vs. Offers</description>
        <label>Shopping Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCode_TXT__c</fullName>
        <formula>TEXT( Source_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceUser_TXT__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FB</fullName>
                    <label>Facebook</label>
                </value>
                <value>
                    <fullName>GY</fullName>
                    <label>Gigya</label>
                </value>
                <value>
                    <fullName>TD</fullName>
                    <label>Dealer Associate</label>
                </value>
                <value>
                    <fullName>TH</fullName>
                    <label>Company Associate</label>
                </value>
                <value>
                    <fullName>HH</fullName>
                    <label>HondaHelper</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>CampaignName</label>
                </value>
                <value>
                    <fullName>TB</fullName>
                    <label>Business Partner Associate</label>
                </value>
                <value>
                    <fullName>TW</fullName>
                    <label>Twitter</label>
                </value>
                <value>
                    <fullName>IG</fullName>
                    <label>Ignition One</label>
                </value>
                <value>
                    <fullName>American Honda eShopping Service</fullName>
                </value>
                <value>
                    <fullName>sample2.eshopping.services.honda.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Unique_ID__c</fullName>
        <label>Source Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <label>Special Requests</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>